trying to fix about photo on mobile

--- a/themes/bourbon-bokeh/assets/scss/_common.scss
+++ b/themes/bourbon-bokeh/assets/scss/_common.scss
@@ -87,7 +87,7 @@ body{
         color: $white;
     }
     @include mobile {
-    background-position: center right;
+    background-position: right right;
     }
 
 }
